final changes to code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -18,52 +19,54 @@
         </nav>
     </header>
         <section>
-            <div class="image1">
-                <img src="./assets/imgs/wp2635081.png" alt="teemoart">
-                <h2 class="subtitle">quomodo haec subtilissima abesse</h2>
+            <div class="imagemain">
+                <img class="imgmain" src="./assets/imgs/wp2635081.png" alt="teemoart">
+                <h2 class="subtitle">How did this subtitle get here?</h2>
             </div>
         </section>
         <main>
-            <section class="sect">
-                <div class="side-bar"><h3 class="about-me">About Me</h3></div>
-                <p>
-                    "Water. Earth. Fire. Air. My grandmother used to tell me 
-                    stories about the old days, a time of peace when the Avatar 
-                    kept balance between the Water Tribes, Earth Kingdom, Fire 
-                    Nation, and Air Nomads. But that all changed when the Fire 
-                    Nation attacked. Only the Avatar mastered all four elements.
-                     Only he could stop the ruthless firebenders. But when the 
-                     world needed him most, he vanished. A hundred years have 
-                     passed and the Fire Nation is nearing victory in the War. 
-                     Two years ago, my father and the men of my tribe journeyed
-                      to the Earth Kingdom to help fight against the Fire Nation,
-                       leaving me and my brother to look after our tribe. Some 
-                       people believe that the Avatar was never reborn into the
-                        Air Nomads, and that the cycle is broken. But I haven't
-                         lost hope. I still believe that somehow, the Avatar will
-                          return to save the world."
-                </p>
-            </section>
-            <section class="sect">
-                <div class="side-bar"><h3>Work</h3></div>
-                <div class="flex-images">
-                    <img id="big-one" src="./assets/imgs/wp2635081.png" alt="teemoart">
-                    <img class="small-ones" src="./assets/imgs/wp2635081.png" alt="teemoart">
-                    <img class="small-ones" src="./assets/imgs/wp2635081.png" alt="teemoart">
-                    <img class="small-ones" src="./assets/imgs/wp2635081.png" alt="teemoart">
-                    <img class="small-ones" src="./assets/imgs/wp2635081.png" alt="teemoart">
-                </div>
-            </section>
-            <footer  class="footer">
-                <div class="side-bar3"><h3 class="contact">Contact</h3><h3 class="contact">Me</h3></div>
-                    <div>
-                        <a href="">555.555.5555</a>
-                        <a href="">beauchewning96@gmail.com</a>
-                        <a href="">GitHub</a>
-                        <a href="">Twitter</a>
-                        <a href="">Spotify</a>
-                    </div>
-            </footer>
+        <div class="flexbox-container">
+            <div class="megaabout">
+<div class="flexbox-item about-title">About Me</div>
+    <div class="about-text">
+        "Water. Earth. Fire. Air. My grandmother used to tell me stories about the old days,
+        a time of peace when the Avatar kept balance between the Water Tribes, Earth Kingdom,
+        Fire Nation, and Air Nomads. But that all changed when the Fire Nation attacked.
+        Only the Avatar mastered all four elements. Only he could stop the ruthless
+        firebenders. But when the world needed him most, he vanished. A hundred
+        years have passed and the Fire Nation is nearing victory in the War.
+        Two years ago, my father and the men of my tribe journeyed to the
+        Earth Kingdom to help fight against the Fire Nation, leaving me
+        and my brother to look after our tribe. Some people believe that
+        the Avatar was never reborn into the Air Nomads, and that the
+        cycle is broken. But I haven't lost hope. I still believe that
+        somehow, the Avatar will return to save the world."
+    </div>
+            </div>
+                   <div class="megawork">
+        <div class="flexbox-item work-title">Work</div>
+
+        <div class=fleximage-container>
+        <div class="flexbox-image"><img class="bigimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="big-image-text">Project 1</div></div>
+        <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 2</div></div>
+        <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 3</div></div>
+        <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 4</div></div>
+        <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 5</div></div>
+    
+            
+            </div>
+    </div>
+<div class="megacontact">
+        <div class="flexbox-item contact-title">Contact Me</div>
+        <div class="footer">
+            <a href="">555.555.5555</a>
+            <a href="">beauchewning96@gmail.com</a>
+            <a href="">GitHub</a>
+            <a href="">Twitter</a>
+            <a href="">Spotify</a>
+        </div>
+</div>
+        </div>
         </main>
 </body>
 </html>
