added project 1 and added links to respected areas dont have a resume yet

--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <header>
         <h1>Beau Chewning</h1>
         <nav>
-            <a href="about me"> About me</a>
-            <a href="work">Work</a>
-            <a href="contack">Contact</a>
+            <a href="#aboutMe"> About me</a>
+            <a href="#work">Work</a>
+            <a href="#footer">Contact</a>
             <a href="resume">Resume</a>
         </nav>
     </header>
         <section>
             <div class="imagemain">
-                <img class="imgmain" src="./assets/imgs/wp2635081.png" alt="teemoart">
-                <h2 class="subtitle">How did this subtitle get here?</h2>
+                <img class="imgmain" src="./assets/imgs/206895.jpg" alt="teemoart">
+                <h2 class="subtitle">Welcome to my page :)</h2>
             </div>
         </section>
         <main>
         <div class="flexbox-container">
             <div class="megaabout">
 <div class="flexbox-item about-title">About Me</div>
-    <div class="about-text">
+    <div id="aboutMe"class="about-text">
         "Water. Earth. Fire. Air. My grandmother used to tell me stories about the old days,
         a time of peace when the Avatar kept balance between the Water Tribes, Earth Kingdom,
         Fire Nation, and Air Nomads. But that all changed when the Fire Nation attacked.
@@ -46,8 +46,8 @@
                    <div class="megawork">
         <div class="flexbox-item work-title">Work</div>
 
-        <div class=fleximage-container>
-        <div class="flexbox-image"><img class="bigimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="big-image-text">Project 1</div></div>
+        <div id="work"class=fleximage-container>
+        <div class="flexbox-image"><img class="bigimage glow" src="./assets/imgs/Screenshot (48).png" alt="teemoart"><div class="big-image-text">GeoStream</div></div>
         <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 2</div></div>
         <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 3</div></div>
         <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 4</div></div>
@@ -58,12 +58,12 @@
     </div>
 <div class="megacontact">
         <div class="flexbox-item contact-title">Contact Me</div>
-        <div class="footer">
-            <a href="">555.555.5555</a>
+        <div id="footer" class="footer">
+            <a href="">352-216-4399</a>
             <a href="">beauchewning96@gmail.com</a>
-            <a href="">GitHub</a>
-            <a href="">Twitter</a>
-            <a href="">Spotify</a>
+            <a href="https://github.com/BeauChewning">GitHub</a>
+        
+           
         </div>
 </div>
         </div>
