--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
         <div class="flexbox-item work-title">Work</div>
 
         <div id="work"class=fleximage-container>
-        <div class="flexbox-image"><img class="bigimage glow" src="./assets/imgs/Screenshot (48).png" alt="teemoart"><div class="big-image-text">GeoStream</div></div>
+        <div class="flexbox-image">
+            <img class="bigimage glow" src="./assets/imgs/Screenshot (48).png" alt="teemoart"/>
+            <a href="https://graybishop.github.io/Geo-Stream/">
+                <span class="pics"></span>
+            </a>
+            <div class="big-image-text">GeoStream</div></div>
+
         <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 2</div></div>
         <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 3</div></div>
         <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 4</div></div>
