added next project to portfolio

--- a/index.html
+++ b/index.html
@@ -48,13 +48,15 @@
 
         <div id="work"class=fleximage-container>
         <div class="flexbox-image">
-            <img class="bigimage glow" src="./assets/imgs/Screenshot (48).png" alt="teemoart"/>
-            <a href="https://graybishop.github.io/Geo-Stream/">
+            <img class="bigimage glow" src="./assets/imgs/Screenshot (48).png" alt="teemoart"/><a class="p1"href="https://graybishop.github.io/Geo-Stream/">
                 <span class="pics"></span>
             </a>
             <div class="big-image-text">GeoStream</div></div>
 
-        <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 2</div></div>
+        <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/reel-cinema.png" alt="teemoart"><a class="p1"href="https://intense-lake-77911.herokuapp.com/">
+            <span></span>
+        </a><div class="small-image-text">Reel Cinema</div></div>
+
         <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 3</div></div>
         <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 4</div></div>
         <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 5</div></div>
