--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="big-image-text">GeoStream</div></div>
 
         <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/reel-cinema.png" alt="teemoart"><a class="p1"href="https://intense-lake-77911.herokuapp.com/">
-            <span></span>
+            <span class="pics"></span>
         </a><div class="small-image-text">Reel Cinema</div></div>
 
         <div class="flexbox-image"><img class="smallimage glow" src="./assets/imgs/wp2635081.png" alt="teemoart"><div class="small-image-text">Project 3</div></div>
